--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,18 @@
 <%- include("partials/header.ejs") %>
 <h1 id="RmdBanner">MovieRmd got all the movie recommendations you need</h1>
-<%- include("partials/toprated.ejs") %> <%- include("partials/popular.ejs") %>
+<nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <form id="searchbar" class="d-flex" role="search">
+      <input
+        id="searchtab"
+        class="form-control me-2"
+        type="search"
+        placeholder="Search"
+        aria-label="Search"
+      />
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+<%- include("partials/trending.ejs") %> <%- include("partials/popular.ejs") %>
 <%- include("partials/footer.ejs") %>
