dynamic page number implemented on the popular movies

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,3 +34,18 @@
         </div>
       </nav>
       <main>
+        <h1 id="RmdBanner">MovieRmd got all the movie recommendations you need</h1>
+        <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid">
+            <form id="searchbar" class="d-flex" role="search" method="get">
+              <input
+                id="searchtab"
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </nav>
