--- a/views/movieSingle.ejs
+++ b/views/movieSingle.ejs
@@ -1,11 +1,13 @@
 <%- include("partials/header.ejs") %>
-<img
+<% details.forEach(function(display){%>
+  <img
   class="img-fluid rounded"
   src="https://image.tmdb.org/t/p/w300<%=display.poster_path  %>"
   alt=""
 />
 
-<p><%= display.title %></p>
+<p><a href="/<%= display.id %>"><%= display.title %></a></p>
 
-<p><%= display.overview %></p>
+<%}) %>
+
 <%- include("partials/footer.ejs") %>
