site almost completed- started implementing carousel

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,2 @@
-<%- include("partials/header.ejs") %> <%- include("partials/trending.ejs") %>
+<%- include("partials/header.ejs") %> <%- include("partials/carousel.ejs") %> <%- include("partials/trending.ejs") %>
 <%- include("partials/popular.ejs") %> <%- include("partials/footer.ejs") %>
