--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,28 @@
 body {
-  background: #00abe4;
+  background: #282612;
 }
-#RmdBanner {
-  background: #ffcc00;
-  text-align: center;
-  color: black;
-  padding: 1rem;
+a{
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+}
+h5{
+  color: white;
+  font-size: 20px;
+  margin: 30px 0px 25px 0px;
+  font-weight: bold;
+}
+
+.card{
+background: rgb(156, 142, 59);
 }
 .grid {
-  /* height: 300vh;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;*/
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 15px;
+  grid-gap: 20px;
   text-align: center;
+  margin-top: 20px;
 }
 
 form#searchbar {
