--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,9 +6,12 @@
     <title>MovieRmd</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/carousel.css">
+
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-md">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" style="font-weight: bold;">MovieRmd</a>
@@ -34,13 +37,17 @@
         </div>
       </nav>
       <main>
-        <h1 id="RmdBanner">MovieRmd got all the movie recommendations you need</h1>
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar bg-light">
           <div class="container-fluid">
+<!-- 
+            <form id="searchForm" action="/search/movie" method="post">
+              <input type="search" placeholder="Search here" name="movie">
+              <button type="submit">Search</button>
+            </form> -->
             <form action="/search/movie" id="searchbar" class="d-flex" role="search" method="post">
               <input
                 id="searchtab"
-                class="form-control me-2"
+                class="form-control me-1"
                 type="search"
                 placeholder="Search"
                 aria-label="Search"
@@ -50,3 +57,4 @@
             </form>
           </div>
         </nav>
+        
