--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,22 @@
 body {
   background: #282612;
+  scroll-behavior: smooth;
 }
-a{
+a {
   color: white;
   font-size: 18px;
   font-weight: bold;
   text-decoration: none;
 }
-h5{
+h5 {
   color: white;
   font-size: 20px;
   margin: 30px 0px 25px 0px;
   font-weight: bold;
 }
 
-.card{
-background: rgb(156, 142, 59);
+.card {
+  background: rgb(156, 142, 59);
 }
 .grid {
   display: grid;
@@ -29,4 +30,32 @@ form#searchbar {
   background: #f0f0f0;
   width: 100%;
   padding: 1rem;
+}
+
+#popup-window {
+  position: fixed;
+  width: 300px;
+  height: 200px;
+  background: white;
+  border: 1px solid black;
+  padding: 10px;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  display: none;
+}
+
+/* #movieDetails {
+  background: green;
+} */
+
+#genre {
+  display: inline;
+  background: #000;
+  border: 2px solid #ffcc00;
+  border-radius: 10px;
+  padding: 7px;
 }
