--- a/views/movieDetails.ejs
+++ b/views/movieDetails.ejs
@@ -1,42 +1,42 @@
 <%- include("partials/header.ejs") %>
-  <div id="movieDetails" class="container-sm">
+<div id="movieDetails" class="container-sm">
+  <img
+    class="img-fluid rounded"
+    src="https://image.tmdb.org/t/p/w300<%=details.poster_path %>"
+    alt=""
+  />
+  <div>
+    <h5>
+      <%= details.original_title %> <br /><br />
 
-        <img
-        class="img-fluid rounded"
-        src="https://image.tmdb.org/t/p/w300<%=details.poster_path %>"
-        alt=""
-      />
-  
-      <h5>
-        <%= details.original_title %> <br /><br />
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="15"
-          viewBox="0 0 24 24"
-          style="background-color: #ffcc00"
-        >
-          <path
-            d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm4.326 18.266l-4.326-2.314-4.326 2.313.863-4.829-3.537-3.399 4.86-.671 2.14-4.415 2.14 4.415 4.86.671-3.537 3.4.863 4.829z"
-          />
-          <p><%= details.popularity %></p>
-        </svg>
-        <br />
-        <p style="color: #ffcc00"><%= details.overview %></p>
-      </h5>
-    
-      <!-- <a href=""
-              ><button class="btn btn-outline-success">See details</button></a
-            > -->
-    </div>
-    
-    <div class="container-sm">
       <% details.genres.forEach(genre => {%>
-      <button class="btn btn" id="genre"><%= genre.name %></button>
+      <p id="genre"><%= genre.name %></p>
       <%}); %>
-    </div>
-  
-  
-  
+      <br />
+
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="15"
+        height="15"
+        viewBox="0 0 24 24"
+        style="background-color: #ffcc00"
+      >
+        <path
+          d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm4.326 18.266l-4.326-2.314-4.326 2.313.863-4.829-3.537-3.399 4.86-.671 2.14-4.415 2.14 4.415 4.86.671-3.537 3.4.863 4.829z"
+        />
+
+        <p><%= details.popularity %></p>
+      </svg>
+
+      <p style="color: #ffcc00"><%= details.overview %></p>
+    </h5>
+
+    <!-- <a href=""
+            ><button class="btn btn-outline-success">See details</button></a
+          > -->
+  </div>
+
+  <
+</div>
 
 <%- include("partials/footer.ejs") %>
