--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,12 +1,20 @@
-@media (max-width: 767px){
-      .grid {
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 20px;
-      }
-      
-      a{
-        font-size: 15px;
-      }
-      
+@media (max-width: 767px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+  }
 
+  a {
+    font-size: 15px;
+  }
+
+  #movieDetails {
+    flex-direction: column;
+    gap: 20px;
+  }
+  #movieDetails > img {
+    display: block;
+    margin: 0 auto;
+    width: 300px;
+  }
 }
