--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,14 +14,14 @@
     <div class="container-md">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="font-weight: bold;">MovieRmd</a>
+          <a class="navbar-brand" href="/" style="font-weight: bold;">MovieRmd</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Recommendations</a>
@@ -39,11 +39,7 @@
       <main>
         <nav class="navbar bg-light">
           <div class="container-fluid">
-<!-- 
-            <form id="searchForm" action="/search/movie" method="post">
-              <input type="search" placeholder="Search here" name="movie">
-              <button type="submit">Search</button>
-            </form> -->
+
             <form action="/search/movie" id="searchbar" class="d-flex" role="search" method="post">
               <input
                 id="searchtab"
