--- a/views/movieDetails.ejs
+++ b/views/movieDetails.ejs
@@ -29,6 +29,16 @@
     <a href="<%= details.homepage %>" target="_blank"
       >Click link for more details</a
     >
+    <!-- 
+    <h2>Trailer</h2>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/<%= trailerUrl %>"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe> -->
 
     <!-- <a href=""
               ><button class="btn btn-outline-success">See details</button></a
