Test how to get user ip address

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
-<%- include("partials/header.ejs") %> <%- include("partials/trending.ejs") %>
+<%- include("partials/header.ejs") %> 
+<h1>Your IP Address: <%= ip %></h1>
+<h2>Your Country: <%= country %></h2>
+<%- include("partials/trending.ejs") %>
 <%- include("partials/popular.ejs") %> <%- include("partials/footer.ejs") %>
 
 
