--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header.ejs") %> 
-<h1>Your IP Address: <%= ip %></h1>
-<h2>Your Country: <%= country %></h2>
+<h1 style="color: white">Your IP Address: <%= ip %></h1>
+<h2 style="color: white;">Your Country: <%= country %></h2>
 <%- include("partials/trending.ejs") %>
 <%- include("partials/popular.ejs") %> <%- include("partials/footer.ejs") %>
 
